WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
267403
REGRESSION (
272706@main
): TestWebKitAPI.PDF.PrintSize is failing on Intel
https://bugs.webkit.org/show_bug.cgi?id=267403
Summary
REGRESSION (272706@main): TestWebKitAPI.PDF.PrintSize is failing on Intel
Tim Horton
Reported
2024-01-11 03:17:48 PST
REGRESSION (
272706@main
): TestWebKitAPI.PDF.PrintSize is failing on Intel
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-01-11 03:18:02 PST
<
rdar://problem/120837366
>
Tim Horton
Comment 2
2024-01-11 03:23:28 PST
Pull request:
https://github.com/WebKit/WebKit/pull/22650
EWS
Comment 3
2024-01-11 11:27:46 PST
Committed
272930@main
(c6d8b99f59c2): <
https://commits.webkit.org/272930@main
> Reviewed commits have been landed. Closing PR #22650 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug