REGRESSION (272706@main): TestWebKitAPI.PDF.PrintSize is failing on Intel https://bugs.webkit.org/show_bug.cgi?id=267403 rdar://120837366

Reviewed by Richard Robinson, Megan Gardner and Aditya Keerthi.

* Source/WebKit/WebProcess/Plugins/PDF/PDFScriptEvaluator.mm:
(WebKit::appendValuesInPDFNameSubtreeToVector):
(WebKit::getAllScriptsInPDFDocument):
No matter how much we might want to use RetainPtr everywhere, some types just
aren't refcounted. Despite looking a lot like a refcounted CF type, CGPDFObjectRef
is one such type. Thus, it's best to not try to call -retain on it, or you
might crash. Or, humorously, if you're on arm64, not crash, but you've still
made a mistake.

Un-do this overuse of RetainPtr.

Canonical link: https://commits.webkit.org/272930@main